--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link
       rel="stylesheet"
-      href="https://bootswatch.com/4/journal/bootstrap.min.css"
+      href="https://bootswatch.com/4/journal/bootstrap.css"
     />
     <link
       rel="stylesheet"
